style.css
/* ... */
.spoiler_stuff
{
	display: box;
}










.c_cols_box1
{
	width: 40%;
	/* margin-top: 50px; */
	align-self: flex-start;
	
	
	margin-left: 40px;
	display: flex;
	flex-direction: column;
}

.c_cols_box1 p
{
	color: white;
	padding: 5px;
	font-family: 'Roboto', sans-serif;
	font-size: 1.2vw;
	font-weight: 300;
	/* color: red; */
}







/*

	"" .qmark

	$ .dolsign
	
	[ .sq_brackets_open

	] .sq_brackets_close
	
	{ .def_brackets_open
	
	} .def_brackets_close
	
	$params .dol_params

	Proxy names .proxy_names
	
	Proxy params .proxy_params
	
	noname cvars .noname_cvars
	
	nums .p_nums
	
	shaders .shaders
	
	btexture .base_texture
	
	comms .comms
	
	Word Proxy .word_proxy
	
	tpath .t_path

*/

.qmark
{
	color: #fbffd2;
}

.dolsign
{
	color: #a4ffad;
}




.sq_brackets_open
{
	color: #fff;
}

.sq_brackets_close
{
	color: #fff;
}




.def_brackets_open
{
	color: #00ff40;
}

.def_brackets_close
{
	color: #00ff40;
}





.dol_params
{
	color: #67d8da;
}

.proxy_names
{
	color: #67d8da;
}

.proxy_params
{
	color: #67d8da;
}

.perc_params_aw
{
	color: #d966ff;
}

.defgray
{
	font-style: italic;
	color: #a2a2a2;
}

.mat_types
{
	color: #7d81ff;
}








.noname_cvars
{
	color: #fbffd2;
}

.p_nums
{
	color: #c8a6ff;
}



.shaders
{
	color: #63fa6f;
	background: black;
}

.base_texture
{
	color: #80a9ff;
	/* background: black; */
}

.comms
{
	color: #f5c48b;
}

.word_proxy
{
	color: #c835f9;
}

.t_path
{
	color: #fbffd2;
}


.white_border_right
{
	border-left: 2px solid white;
}



.c_pickers_mtable
{
	/* width: 200px; */
	display: flex;
	justify-content: space-between;
	
	flex-direction: column;
	
	
}














.c_pickers_mtable p
{
	/* width: 50%; */
	margin: 0px;
	display: box;
}

.mtable_p
{
	width: 50%;
}

.mtable_line
{
	display: flex;
}


#dl_button_pootis
{
	
	margin-top: 20px !important;
	/* margin-left: 30% !important; */
	width: 20vw !important;
	/* height: 20px; */
	all: unset;
	color: #d8ded3;
	background: #4c5844;
	border: 0px;
	/* border-right: 2px solid #282e22; */
	/* border-bottom: 2px solid #282e22; */
	
	/* border-left: 2px solid #889180; */
	/* border-top: 2px solid #889180; */
	padding: 15px 32px;
	
	
	box-shadow: inset -2px -2px 0px 0px rgba(40,46,34,1), inset 2px 2px 0px 0px rgba(136,145,128,1);
	
	/* box-shadow: inset -2px -2px 0px 0px rgba(40,46,34,1); */
	
	font-family: VerdanaPro-Light;
	align-self: center;
	text-align: center;
	
	user-select: none;
	
}



#dl_button_pootis:active
{
	outline: none;
	box-shadow: inset 2px 2px 0px 0px rgba(40,46,34,1), inset -2px -2px 0px 0px rgba(136,145,128,1);
}


#dl_button_pootis a
{
	/* width: auto; */
	/* height: auto; */
	padding: 0px;
	/* color: white; */
	font-family: VerdanaPro-Light;
}



#dl_button_pootis a:active
{
	top: 5px;
	left: 10px;
	color: red;
}



.not_button
{
	background: rgba(0, 0, 0, 0.11);
}





.theme_bg_cont
{
	display: flex;
	text-align: center;
}

.theme_bg_cont button
{
	margin-left: 15px;
}

.theme_bg_cont a
{
	text-align: center;
}

.theme_bg_cont input
{
	outline: none;
	height: auto;
}





#cd_theme_bg_picker
{
	padding-left: 5px;
	/* width: 30%; */
	width: 4em;
	height: auto;
	
	vertical-align: center;
	
	font-size: 1em;
	background: rgba(0, 0, 0, 0.5);
	/* font-family: tahoma;	 */
	color: white;
	
	outline: none;
	border: none;
	

}

.col_text_picker
{
	all: unset;
	outline: none;
	width: 35% !important;
	background: rgba(0, 0, 0, 0.5);
	/* height: 100% !important; */
	/* text-align: center; */
	padding-left: 5px;
}


.cpicker_extra
{
	display: flex;
	width: auto;
	justify-content: space-between;
}

.mt_rside
{
	display: flex;
	width: 50%;
}


.btn_set_def
{
	all: unset;
	margin-right: 2em;
	padding: 0px 10px 0px 10px;
	
	outline: none;
	border: none;
	
	box-shadow: inset -1px -1px 0px 0px rgba(40,46,34,1), inset 1px 1px 0px 0px rgba(136,145,128,1);
	background: #4c5844;
	font-family: tahoma;
	color: #d8ded3;
	
	text-align: center;
	
	font-size: 13px;
	
	user-select: none;
	
}



.btn_set_def:active
{
	outline: none;
	box-shadow: inset 1px 1px 0px 0px rgba(40,46,34,1), inset -1px -1px 0px 0px rgba(136,145,128,1);
	/* padding: 1px 9px 0px 10px; */
	/* margin-left: 15px; */
}



.madeby
{
	margin-top: 220px;
	background: rgba(0, 0, 0, 0.11);
}


.mby:hover
{
	color: #d8ded3;
}


#def_all_nan
{
	/* display: none; */
	pointer-events: none;
	user-select: none;
	opacity: 0;
}

#dl_sets_btn
{
	/* display: none; */
	pointer-events: none;
	user-select: none;
	opacity: 0;
}




#reset_all
{
	width: 46%;
}

#sets_dl
{
	width: 46%;
}


@media (max-width: 1490px) 
{
  .into_text_root 
  {
	  /* background: red; */
    margin-left: 20px;
  }
  
  	#reset_all
	{
		width: 100%;
	}
	
	#sets_dl
	{
		width: 100%;
	}
	
	.save_to_file
	{
		width: 100%;
	}
	
	.dropdown_menu_descr
	{
		width: 69% !important;
	}
	
	#upload_vmat
	{
		width: 100%;
	}
	
	#vmat_diff_only
	{
		width: 100%;
	}
	
	#dl_to_file_btn
	{
		width: 100%;
	}
	
	
}

.safety_margin
{
	margin-top: 40px;
}


.upload_vmat
{
	/* all: unset; */
	/* width: 35% !important; */
	/* visibility: hidden; */
	
}

.save_to_file
{
	width: 46%;
}



.meme
{
	align-self: flex-start;
	align-items: flex-start;
	
	margin-top: 555px;
	
	margin-left: 20px;
}



/* to kinda revert the latest commit:

	1 - comment the very last div which also has meme class
	
	2 - comment load diff only row
	
	3 - comment vmat_reader.js in the very end of the document


*/






/* New fancy bs date hover info */





/*

.dl_new[rdate]:hover::after 
{
  content: attr(rdate);
  position: absolute;
  left: -36%;
  top: -50px;
  min-width: 200px;
  border: 0px #aaaaaa solid;
  border-radius: 999px;
  background-color: white;
  padding: 12px;
  color: #000000;
  font-size: 14px;
  z-index: 1;
}

.dl_new:hover::before
{
  content: "";
  position: absolute;
  left: 36%;
  top: -25px;
  width: 1px;
  height: 1px;
  background-color: white;
  transform: rotateZ(45deg);
  z-index: 1;
  padding: 12px;
}
/* ... */

